--- a/src/components/item-add-form/item-add-form.css
+++ b/src/components/item-add-form/item-add-form.css
@@ -1,3 +1,14 @@
 .item-add-form {
     margin: 10px 0 0;
+    max-height: 44px;
+}
+
+.item-add-form input {
+    margin-right: 5px;
+}
+
+.item-add-form button {
+    align-items: center;
+    display: flex;
+    font-size: 14px;
 }
